--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -23,10 +23,33 @@
   }
 }
 
-.navbaritem {
-  display: flex;
-  flex-direction: row;
+.navbaritem{
+
+padding-left: 30px;
 }
+
+.navbaritem:hover {
+
+  background-color: $BackgroundColor;
+}
+
+.logo {
+  width: 10em;
+  height: 10em;
+padding: 14px;
+  padding-bottom: 90px;
+}
+
+.navSVG{
+  float: right;
+width: 2em;
+height: 2em;
+padding-top: 25px;
+padding-right: 20px;
+
+}
+
+
 
 @media screen and (max-width: 700px) {
   .sidebar {
