almost done with the desktop version of the layout. Need to work on the containers for desktop and mobile

--- a/src/components/app/App.scss
+++ b/src/components/app/App.scss
@@ -9,8 +9,54 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   vertical-align: baseline;
 }
 
-.flex_container {
-  display: flex;
-  flex-direction: column;
 
+
+.grid_container {
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  grid-template-rows: 1fr;
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
+  justify-items: stretch;
+  align-items: stretch;background-color: $BackgroundColor;
+  height: 100%;
+}
+
+.monitor_container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
+  justify-items: stretch;
+  align-items: stretch;
+
+
+}
+
+
+@media screen and (max-width: 700px) {
+
+  .grid_container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
+    align-items: stretch;
+    background-color: $BackgroundColor;
+  }
+
+  .monitor_container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
+    justify-items: stretch;
+    align-items: stretch;
+
+  }
+
+
+h1{ font-size: 5vh;}
 }
